sre/observability/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
    - "*"
  gateways:
    - parkir-pintar/parkirpintar-gateway
  http:
    - match:
        - uri:
            prefix: /monitor
      route:
        - destination:
            host: grafana.monitoring.svc.cluster.local
            port:
              number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - parkir-pintar/parkirpintar-gateway
  http:
    - match:
        - uri:
            prefix: /kiali
      route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
